Fixed some spacing issues

--- a/app/index.css
+++ b/app/index.css
@@ -138,7 +138,7 @@ nav li{
 }
 
 .instructions-container {
-  margin: 100px 0;
+  margin: 20px 0;
 }
 
 .container-sm {
@@ -248,7 +248,7 @@ nav li{
 }
 
 .players-container {
-  margin: 100px 0;
+  margin: 50px 0;
 }
 
 .avatar-small {
